# rat

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  build-solution.bat
.github/workflows/: build.yml  format.yml
example/: CMakeLists.txt  main.cpp
example/assets/: shader.fs  shader.vs
include/: rat.hpp
src/: rat.cpp
src/rat/: core.cpp  core.hpp  engine.cpp  engine.hpp  logger.cpp  logger.hpp  math.hpp  rat.cpp  rat.hpp  surface.cpp  surface.hpp  window.hpp
src/rat/core/: application_info.hpp  file_system.cpp  file_system.hpp  logger.cpp  logger.hpp  math.hpp  rat.cpp  window.hpp
src/rat/platform/glfw/: glfw.hpp  glfw_window.cpp  glfw_window.hpp
src/rat/platform/opengl/: opengl_graphics_context.cpp  opengl_graphics_context.hpp  opengl_mesh.cpp  opengl_mesh.hpp  opengl_pipeline.cpp  opengl_pipeline.hpp  opengl_shader.cpp  opengl_shader.hpp  opengl_texture.cpp  opengl_texture.hpp
src/rat/rendering/: camera.hpp  drawable.hpp  graphics.cpp  graphics.hpp  graphics_context.cpp  graphics_context.hpp  material.hpp  render_target.hpp  vertex.hpp
src/rat/rendering/interface/: graphics_context.hpp  mesh.hpp  pipeline.hpp  shader.hpp  texture.hpp
